feat : #56 - 산책 캘린더 조회 기능 구현