@@ -1,5 +1,6 @@
 package com._dengz.mungcourse.service;
 
+import com._dengz.mungcourse.dto.walk.WalkDateResponse;
 import com._dengz.mungcourse.dto.walk.WalkRequest;
 import com._dengz.mungcourse.dto.walk.WalkResponse;
 import com._dengz.mungcourse.dto.walk.WalkSimpleResponse;
@@ -66,8 +67,8 @@ public class WalkService {
     }
 
     @Transactional(readOnly = true)
-    public List<WalkResponse> findWalksByYearAndMonth(String yearMonth, User user) {
-        YearMonth ym = YearMonth.parse(yearMonth);
+    public List<WalkDateResponse> findWalksByYearAndMonth(String yearAndMonth, User user) {
+        YearMonth ym = YearMonth.parse(yearAndMonth);
         LocalDateTime startDayOfMonth = ym.atDay(1).atStartOfDay();
         LocalDateTime endDayOfMonth = ym.atEndOfMonth().atTime(23, 59, 59);
 
@@ -77,16 +78,9 @@ public class WalkService {
             throw new WalkNotFoundException();
         }
 
-        return walks.stream().map(walk -> { // walk는 walks 리스트에 있는 데이터 하나이고 해당 리스트 반복해서 walkResponse의 List를 만듦
-            List<Dog> dogs = walkDogRepository.findAllByWalk(walk)
-                    .stream()
-                    .map(WalkDog::getDog)
-                    .toList();
-
-            List<WalkRequest.GpsPoint> gpsPoints = gpsDeserializate(walk);
-
-            return WalkResponse.create(walk, dogs, gpsPoints);
-        }).collect(Collectors.toList()); // 이거로 리스트화
+        return walks.stream()
+                .map(WalkDateResponse::create)
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
